--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@tanstack/react-query": "^5.84.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-screens": "^4.13.1",
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -38,6 +40,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
