--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.80.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-toast-message": "^2.3.3"
