--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
     "@tanstack/react-query": "^5.84.1",
+    "deepmerge": "^4.3.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-flash-message": "^0.4.2",
