feat: setup app icon and bootsplash

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deepmerge": "^4.3.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-bootsplash": "^6.3.10",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-paper": "^5.14.5",
