--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "ENVFILE=.env react-native run-android",
+    "ios": "ENVFILE=.env react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "ENVFILE=.env react-native start",
     "generate:images": "node ./scripts/generate-image-list.js",
     "test": "jest"
   },
