--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "ENVFILE=.env react-native run-android",
     "ios": "ENVFILE=.env react-native run-ios",
     "lint": "eslint .",
-    "start": "ENVFILE=.env react-native start",
+    "start": "ENVFILE=.env react-native start --client-logs",
     "generate:images": "node ./scripts/generate-image-list.js",
     "test": "jest"
   },
@@ -26,6 +26,7 @@
     "react-native-config": "^1.5.6",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-mmkv": "^3.3.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
