--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@react-navigation/stack": "^7.4.5",
     "@tanstack/react-query": "^5.84.1",
     "deepmerge": "^4.3.1",
+    "i18next": "^25.3.2",
     "react": "19.1.0",
+    "react-i18next": "^15.6.1",
     "react-native": "0.80.2",
     "react-native-bootsplash": "^6.3.10",
     "react-native-config": "^1.5.6",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-localize": "^3.5.1",
     "react-native-mmkv": "^3.3.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.2",
